# dns-update

./: .gitignore  pyproject.toml
mine_dns/: __init__.py  main.py  models.py  routers.py
